--- a/package.json
+++ b/package.json
@@ -31,9 +31,18 @@
   },
   "devDependencies": {
     "babel-preset-env": "^1.6.1",
+    "eslint": "^6.8.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
     "husky": "^0.14.3",
-    "jest": "^22.4.2",
+    "jest": "^26.0.0",
     "lint-staged": "^7.1.0"
+  },
+  "jest": {
+    "testURL": "http://localhost/"
   },
   "lint-staged": {
     "*.js": [
