--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "structlint",
-  "version": "0.9.0",
+  "name": "folderslint",
+  "version": "0.0.9",
   "description": "Project directory structure linter",
   "main": "index.js",
   "scripts": {
@@ -13,6 +13,7 @@
     "linter",
     "structure",
     "directory",
+    "folders",
     "project"
   ],
   "bin": "index.js",
@@ -24,12 +25,12 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/denisraslov/structlint.git"
+    "url": "https://github.com/denisraslov/folderslint.git"
   },
   "bugs": {
-    "url": "https://github.com/denisraslov/structlint/issues"
+    "url": "https://github.com/denisraslov/folderslint/issues"
   },
-  "homepage": "https://github.com/denisraslov/structlint#readme",
+  "homepage": "https://github.com/denisraslov/folderslint#readme",
   "dependencies": {
     "chalk": "^4.0.0",
     "glob": "^7.1.6",
