--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "devDependencies": {
     "babel-preset-env": "^1.6.1",
     "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.15.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
@@ -46,14 +47,22 @@
     "eslint-plugin-standard": "^4.0.1",
     "husky": "^0.14.3",
     "jest": "^26.0.0",
-    "lint-staged": "^7.1.0"
+    "lint-staged": "^7.1.0",
+    "prettier": "^2.2.1",
+    "pretty-quick": "^3.1.0"
   },
   "jest": {
     "testURL": "http://localhost/"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "lint-staged": {
     "*.js": [
-      "eslint"
+      "eslint",
+      "prettier --write"
     ]
   }
 }
