--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "husky": "^0.14.3",
     "jest": "^26.0.0",
     "lint-staged": "^7.1.0",
-    "prettier": "^2.2.1",
+    "prettier": "2.7.1",
     "pretty-quick": "^3.1.0"
   },
   "jest": {
